started pillar r detail page, issues with multiple collapse divs showing

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -185,6 +185,26 @@ p.opt-pillar-desc {
   margin-top: 10px;
 }
 
+.pillar {
+
+}
+
+.opt-about-pillars-detail {
+  // display:none;
+}
+
+#employ {
+background-color: blue;
+}
+
+#empower {
+  background-color: red;
+} 
+
+#engage {
+background-color: grey;
+}
+
 /****************************************************************
   Team Page Styles
 *****************************************************************/
@@ -217,7 +237,6 @@ p.opt-pillar-desc {
 
 .tile-job {
     min-height: 40%;
-    /*height: 100%;*/
     color: white;
     background:transparent url('../images/job-banner.jpg') center center no-repeat;
     background-size:cover;
@@ -225,7 +244,6 @@ p.opt-pillar-desc {
 
 .job-header {
     padding-top:100px;
-  // padding-bottom:10px;
     text-align:center;
   text-shadow:1px 1px #000000;
   font-size: 25px;
